bugs/2_Nov_2018_9AM/boost-1-68_make_out
[zluudg@zluudgbox build]$ make
Scanning dependencies of target gnuradio-dmdl
[  2%] Building CXX object lib/CMakeFiles/gnuradio-dmdl.dir/timer_impl.cc.o
[  4%] Building CXX object lib/CMakeFiles/gnuradio-dmdl.dir/backoff_impl.cc.o
/home/zluudg/Software/gr-dmdl/lib/backoff_impl.cc: In member function ‘void gr::dmdl::backoff_impl::countdown_random_backoff()’:
/home/zluudg/Software/gr-dmdl/lib/backoff_impl.cc:277:77: error: no matching function for call to 
‘boost::date_time::subsecond_duration<boost::posix_time::time_duration, 1000>::subsecond_duration(float&)’
       boost::this_thread::sleep(boost::posix_time::milliseconds(backoff_time));
                                                                             ^
In file included from /usr/include/boost/date_time/posix_time/posix_time_config.hpp:16,
                 from /usr/include/boost/date_time/posix_time/posix_time_system.hpp:13,
                 from /usr/include/boost/date_time/posix_time/ptime.hpp:12,
                 from /usr/include/boost/date_time/posix_time/posix_time_types.hpp:12,
                 from /usr/include/boost/thread/thread_time.hpp:11,
                 from /usr/include/boost/thread/lock_types.hpp:18,
                 from /usr/include/boost/thread/pthread/thread_data.hpp:12,
                 from /usr/include/boost/thread/thread_only.hpp:17,
                 from /usr/include/boost/thread/thread.hpp:12,
                 from /usr/include/gnuradio/thread/thread.h:26,
                 from /usr/include/gnuradio/basic_block.h:31,
                 from /usr/include/gnuradio/block.h:27,
                 from /home/zluudg/Software/gr-dmdl/include/dmdl/backoff.h:29,
                 from /home/zluudg/Software/gr-dmdl/lib/backoff_impl.h:28,
                 from /home/zluudg/Software/gr-dmdl/lib/backoff_impl.cc:30:
/usr/include/boost/date_time/time_duration.hpp:285:14: note: candidate: ‘template<class T> boost::date_time::subsecond_duration<base_duration, 
frac_of_second>::subsecond_duration(const T&, typename boost::enable_if<boost::is_integral<T>, void>::type*)’
     explicit subsecond_duration(T const& ss,
              ^~~~~~~~~~~~~~~~~~
/usr/include/boost/date_time/time_duration.hpp:285:14: note:   template argument deduction/substitution failed:
/usr/include/boost/date_time/time_duration.hpp: In substitution of ‘template<class T> boost::date_time::subsecond_duration<boost::posix_time::time_duration, 
1000>::subsecond_duration(const T&, typename boost::enable_if<boost::is_integral<T>, void>::type*) [with T = float]’:
/home/zluudg/Software/gr-dmdl/lib/backoff_impl.cc:277:77:   required from here
/usr/include/boost/date_time/time_duration.hpp:285:14: error: no type named ‘type’ in ‘struct boost::enable_if<boost::is_integral<float>, void>’
In file included from /usr/include/boost/date_time/posix_time/posix_time_config.hpp:16,
                 from /usr/include/boost/date_time/posix_time/posix_time_system.hpp:13,
                 from /usr/include/boost/date_time/posix_time/ptime.hpp:12,
                 from /usr/include/boost/date_time/posix_time/posix_time_types.hpp:12,
                 from /usr/include/boost/thread/thread_time.hpp:11,
                 from /usr/include/boost/thread/lock_types.hpp:18,
                 from /usr/include/boost/thread/pthread/thread_data.hpp:12,
                 from /usr/include/boost/thread/thread_only.hpp:17,
                 from /usr/include/boost/thread/thread.hpp:12,
                 from /usr/include/gnuradio/thread/thread.h:26,
                 from /usr/include/gnuradio/basic_block.h:31,
                 from /usr/include/gnuradio/block.h:27,
                 from /home/zluudg/Software/gr-dmdl/include/dmdl/backoff.h:29,
                 from /home/zluudg/Software/gr-dmdl/lib/backoff_impl.h:28,
                 from /home/zluudg/Software/gr-dmdl/lib/backoff_impl.cc:30:
/usr/include/boost/date_time/time_duration.hpp:270:30: note: candidate: ‘boost::date_time::subsecond_duration<boost::posix_time::time_duration, 
1000>::subsecond_duration(const boost::date_time::subsecond_duration<boost::posix_time::time_duration, 1000>&)’
   class BOOST_SYMBOL_VISIBLE subsecond_duration : public base_duration
                              ^~~~~~~~~~~~~~~~~~
/usr/include/boost/date_time/time_duration.hpp:270:30: note:   no known conversion for argument 1 from ‘float’ to ‘const 
boost::date_time::subsecond_duration<boost::posix_time::time_duration, 1000>&’
/usr/include/boost/date_time/time_duration.hpp:270:30: note: candidate: ‘boost::date_time::subsecond_duration<boost::posix_time::time_duration, 
1000>::subsecond_duration(boost::date_time::subsecond_duration<boost::posix_time::time_duration, 1000>&&)’
/usr/include/boost/date_time/time_duration.hpp:270:30: note:   no known conversion for argument 1 from ‘float’ to 
‘boost::date_time::subsecond_duration<boost::posix_time::time_duration, 1000>&&’
make[2]: *** [lib/CMakeFiles/gnuradio-dmdl.dir/build.make:76: lib/CMakeFiles/gnuradio-dmdl.dir/backoff_impl.cc.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:180: lib/CMakeFiles/gnuradio-dmdl.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
